SRC_ROOT = ..
AM_CFLAGS = -I$(SRC_ROOT)
lib_LTLIBRARIES = libSGL.la
libSGL_la_SOURCES = sgl_headers.h \
		    sgl_api.h \
		    types.h \
		    logging.c logging.h \
		    context.c context.h \
		    matrix.c matrix .h \
		    geometry.c geometry. h \
		    $(SRC_ROOT)/math/m_vector.c $(SRC_ROOT)/math/m_vector.h \
		    $(SRC_ROOT)/math/m_matrix.c $(SRC_ROOT)/math/m_matrix.h
