SRC_ROOT = ..
AM_CFLAGS = -I$(SRC_ROOT) -Wall -O2
lib_LTLIBRARIES = libSGL.la
libSGL_la_SOURCES = config.h \
		    macro.h \
		    sglapi.h \
		    sglheader.h \
		    types.h \
		    context.c context.h \
		    geometry.c geometry. h \
		    logging.c logging.h \
		    matrix.c matrix .h \
		    viewport.c viewport.h \
		    driver.h \
		    $(SRC_ROOT)/math/m_vector.c $(SRC_ROOT)/math/m_vector.h \
		    $(SRC_ROOT)/math/m_matrix.c $(SRC_ROOT)/math/m_matrix.h
